# cclaude-android

./: README.md  build.sh
.github/workflows/: build.yml  release.yml
android-app/: gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt
android-app/app/src/main/java/com/cclaude/: CClaudeApplication.kt  MainActivity.kt
android-app/app/src/main/java/com/cclaude/data/: Message.kt
android-app/app/src/main/java/com/cclaude/provider/: ProviderConfig.kt  ProviderManager.kt
android-app/app/src/main/java/com/cclaude/service/: ChatViewModel.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/zig-bridge/: build.gradle.kts
android-app/zig-bridge/src/main/cpp/: CMakeLists.txt  cclaude_jni.cpp
android-app/zig-bridge/src/main/java/com/cclaude/zig/: CClaudeAgent.kt  CClaudeNative.kt  ProviderDiagnostics.kt
zig-core/: build.zig
zig-core/src/: root.zig
zig-core/src/agent/: config.zig  root.zig
zig-core/src/jni/: root.zig
zig-core/src/memory/: auto_learn.zig  context.zig  root.zig  versioning.zig
zig-core/src/research/: literature.zig  pipeline.zig  root.zig  stages.zig
zig-core/src/runtime/: c_api.zig
zig-core/src/tools/: editfile.zig  fetch.zig  glob.zig  readfile.zig  root.zig  search.zig  shell.zig  undoable.zig  web_search.zig  writefile.zig
zig-core/src/undo/: history.zig  operation.zig  root.zig  snapshot.zig
zig-core/src/utils/: http.zig  json.zig  root.zig  sse.zig  string.zig
(+5 files in other folders)
